--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,13 @@ documentation = "https://github.com/nextdaylost/cosmos"
 [tool.poetry.dependencies]
 python = "^3.11"
 
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
+coverage = "^7.3.1"
+pytest = "^7.4.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
