--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,10 @@ python = "^3.11"
 optional = true
 
 [tool.poetry.group.dev.dependencies]
+black = "^23.7.0"
 coverage = "^7.3.1"
+flake8 = "^6.1.0"
+flake8-docstrings = "^1.7.0"
 pytest = "^7.4.2"
 
 [build-system]
