--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ documentation = "https://github.com/nextdaylost/cosmos"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+fastapi = "^0.103.1"
+uvicorn = "^0.23.2"
 
 [tool.poetry.group.dev]
 optional = true
