Add externalized configuration management

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ documentation = "https://github.com/nextdaylost/cosmos"
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.103.1"
+pydantic = "^1.10.12"
 uvicorn = "^0.23.2"
 
 [tool.poetry.group.dev]
